# technical-interview-prep

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml
notebooks/: ecommerce.ipynb  practice-questaions-08-29-2025.ipynb  practice-questions-sql.ipynb  practice-questions.ipynb
scripts/: create_fake_datasets.sh  create_sqlite_tables.py  fake_customers.py  fake_products.py  fake_reviews.py  fake_transactions.py  populate_sqlite_tables.py
