[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"

[project]
name = "interview-prep-datasets"
description = "Generating fake datasets for Data Science technical interviews in Pandas/SQL"
version = "0.0.1"
authors = [
	{ name = "neil.bardhan", email = "indraneil.bardhan@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.poetry]
package-mode = false 

[tool.poetry.dependencies]
faker = "^37.0.0"
pandas = "^2.2.0"
requests = "^2.32.2"
ipykernel = "^6.30.1"
jupyterlab = "^4.4.6"
